# Kiran-VM

./: .gitignore  .yamllint  Makefile  README.md  Taskfile.yml  aiostreams_routes.yml  ansible-tutorial.md  caddy-server.md  docker-tutorial.md  llms.txt  main.tf  traefik_dynamic.yml  traefik_test.yml
.github/workflows/: deploy-stacks.yml  repo-deploy.yml  security.yml  taskfile-ci.yml
ansible/: .gitignore  README.md  ansible.cfg  secrets.yml.example  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: generate.sh  hosts.ini  hosts.ini.example
docs/: komodo-tutorial.md  selfhost.md  server-setup.md
docs/plans/: 2026-03-03-komodo-git-backed-stacks.md  2026-03-26-openclaw-vps-stack.md  2026-03-31-wallos-litestream-backup.md
infra/: .gitignore  Pulumi.kiran-prod.yaml  Pulumi.kiran-self-hosting.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  constants.py  index.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sync_constants.py  tsconfig.json
infra/scripts/: update_cloudflare_cnames.py
infra/tests/: test_update_cloudflare_cnames.py
provision/: .gitignore  README.md  bootstrap.sh  requirements.yml  secrets.example.yml  secrets.yml.example  site.yml
provision/group_vars/: all.yml
provision/inventory/: generate.sh  hosts.ini.example
provision/scripts/: check_unique_traefik_hosts.py  infra_constant.py
pyinfra/: deploy.py  inventory.py  utils.py
pyinfra/deploy/: caddy.py  (+8 more)
scripts/: provision-pyinfra.sh  provision.sh
stacks/: DATABASE.md  README.md
taskfiles/: core.yml  infra.yml  integrations.yml  server.yml
(+222 files in other folders)
