[project]
name = "infra"
version = "0.1.0"
description = "Oracle Cloud Infrastructure provisioning for an Always Free ARM VM"
requires-python = ">=3.9"
dependencies = [
    "cloudflare>=4.3.1",
    "PyYAML>=6.0.2",
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-cloudflare>=6.0.0,<7.0.0",
    "pulumi-oci>=2.0.0,<3.0.0",
]
